fontawesome hotfix. added data-auto-replace-svg attribute to index.html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,7 @@
     <script
       src="https://kit.fontawesome.com/824a38e3f8.js"
       crossorigin="anonymous"
+      data-auto-replace-svg="nest"
     ></script>
 
     <link
