--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,10 @@
       crossorigin="anonymous"
       data-auto-replace-svg="nest"
     ></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
@@ -35,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Google Fonts Clone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
